--- a/source/build-cmake/fm7/CMakeLists.txt
+++ b/source/build-cmake/fm7/CMakeLists.txt
@@ -6,9 +6,9 @@
 cmake_minimum_required (VERSION 2.8)
 cmake_policy(SET CMP0011 NEW)
 
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (emufm7)
+set(CMAKE_MODULE_PATH "${emufm7_SOURCE_DIR}/../cmake")
 
 set(BUILD_FM7 ON CACHE BOOL "Build for FM7")
 
