--- a/source/build-cmake/fm77av40ex/CMakeLists.txt
+++ b/source/build-cmake/fm77av40ex/CMakeLists.txt
@@ -6,10 +6,10 @@
 cmake_minimum_required (VERSION 2.8)
 cmake_policy(SET CMP0011 NEW)
 
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (emufm77av40ex)
 
+set(CMAKE_MODULE_PATH "${emufm77av40ex_SOURCE_DIR}/../cmake")
 set(BUILD_FM77AV40EX ON CACHE BOOL "Build for FM77AV40EX")
 
 include(config_emufm7)
