--- a/source/build-cmake/fmr250/CMakeLists.txt
+++ b/source/build-cmake/fmr250/CMakeLists.txt
@@ -10,10 +10,9 @@ message("")
 message("** Start of configure CommonSourceProject,FMR250, Qt **")
 message("")
 
-set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
-
-
 project (emufmr250)
+
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
 
 set(BUILD_FMR250 ON CACHE BOOL "Build for FM-R250")
 
