[UI][Qt][BUBBLE] Minimize VM depended unit.

--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -23,7 +23,7 @@ set(QT_COMMON_BASE
 	  emu_thread.cpp
 	  emu_thread_slots.cpp
 	  util_fd2.cpp
-	  util_bubble2.cpp
+#	  util_bubble2.cpp
 	  util_main.cpp
 	  ../osd.cpp
 	  ../osd_wrapper.cpp
@@ -34,29 +34,36 @@ set(QT_COMMON_BASE
 		      ${CMAKE_CURRENT_SOURCE_DIR}/qrc/i18n_global.qrc
 		      ${CMAKE_CURRENT_SOURCE_DIR}/qrc/icons.qrc)
 
-# QT5_ADD_RESOURCES(s_qt_common_RCC ${RESOURCE}
-#		      ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/i18n_global.qrc
-#		      ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/icons.qrc)
-#include(cotire)
+if(WIN32)
+    #add_library(Qt5::WinMain STATIC IMPORTED)
 
-add_executable(${EXEC_TARGET}
+  add_executable(${EXEC_TARGET}
+	  WIN32
 	  ${QT_COMMON_BASE}
 	  ${s_qt_common_headers_MOC}
 	  ${s_qt_common_RCC}
-)
+	  )
+ else()
+  add_executable(${EXEC_TARGET}
+	  ${QT_COMMON_BASE}
+	  ${s_qt_common_headers_MOC}
+	  ${s_qt_common_RCC}
+	  )
+endif()
 #cotire(${EXEC_TARGET})
 
 if(USE_QT_5)
   if(USE_SOCKET)
-    QT5_USE_MODULES(${EXEC_TARGET} Widgets Core Gui OpenGL Network)
+    QT5_USE_MODULES(${EXEC_TARGET} WinMain Widgets Core Gui OpenGL Network)
   else()
     QT5_USE_MODULES(${EXEC_TARGET} Widgets Core Gui OpenGL)
   endif()
 endif()
 
+
 if(WIN32)
  
-  
+find_package(Qt5Core)  
   #if(USE_FMGEN)
    #${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPosd/build-win32/qt/osd/libqt_osd.a
    #${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPgui/build-win32/qt/gui/libqt_gui.a
@@ -64,7 +71,7 @@ if(WIN32)
    # ${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPemu_utils/build-win32/qt/emuutils/libemu_utils.a
    #${CMAKE_SOURCE_DIR}/../../build-cmake/libCSPgui/build-win32/qt/gui/libqt_gui.a
 
- #endif()
+   #endif()
  target_link_libraries(${EXEC_TARGET}
  ${LOCAL_LIBS}
  ${CMAKE_SOURCE_DIR}/../../build-cmake/bin-win32/libCSPemu_utils.dll.a
