[UI][Qt] Update UI.

--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -26,6 +26,7 @@ set(QT_COMMON_BASE
 	  emu_thread.cpp
 	  emu_thread_slots.cpp
 	  util_fd2.cpp
+	  util_hdd2.cpp
 #	  util_bubble2.cpp
 	  util_main.cpp
 	  ../osd.cpp
