[Qt][WIN32] Fix linkage error at MinGW.

--- a/source/src/CMakeLists.txt
+++ b/source/src/CMakeLists.txt
@@ -9,6 +9,7 @@ if(USE_DEVICES_SHARED_LIB)
   add_library(common_common
 	config.cpp
 	debugger.cpp
+#	statesub.cpp
 	)
 else()
   add_library(common_common
