[Qt][OpenGL] Initial support of OpenGL 4.3 Core profile. [Qt][OpenGL] Use template class instead of GL2.0. [UI][Qt] Separate some command line parsing to sub-routines. [Build][CMake] Update file desc.

--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -39,7 +39,7 @@ set(QT_COMMON_BASE
 		      ${CMAKE_CURRENT_SOURCE_DIR}/qrc/icons.qrc)
 
 if(WIN32)
-    #add_library(Qt5::WinMain STATIC IMPORTED)
+	set(QT_COMMON_BASE ../gui/qt_main.cpp ${QT_COMMON_BASE} )
 
   add_executable(${EXEC_TARGET}
 	  WIN32
