--- a/source/build-cmake/mz2800/CMakeLists.txt
+++ b/source/build-cmake/mz2800/CMakeLists.txt
@@ -20,7 +20,9 @@ set(WITH_MOUSE ON)
 
 set(VMFILES
 		   mz1p17.cpp
-		   
+		   scsi_dev.cpp
+		   scsi_hdd.cpp
+		   scsi_host.cpp
 		   event.cpp
 		   io.cpp
 )
