--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -25,8 +25,8 @@ set(QT_COMMON_BASE
 	  
 	  emu_thread.cpp
 	  emu_thread_slots.cpp
-	  util_fd2.cpp
-	  util_hdd2.cpp
+#	  util_fd2.cpp
+#	  util_hdd2.cpp
 #	  util_bubble2.cpp
 	  util_main.cpp
 	  ../osd.cpp
