[VM][General][WIP] Merging Upstream 2018-12-09.Still WIP.

--- a/source/vc++2008/pc8801ma.vcproj
+++ b/source/vc++2008/pc8801ma.vcproj
@@ -650,6 +650,66 @@
 					</FileConfiguration>
 				</File>
 				<File
+					RelativePath="..\src\vm\scsi_cdrom.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\src\vm\scsi_dev.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\src\vm\scsi_host.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath="..\src\vm\upd1990a.cpp"
 					>
 					<FileConfiguration
@@ -671,6 +731,26 @@
 				</File>
 				<File
 					RelativePath="..\src\vm\upd765a.cpp"
+					>
+					<FileConfiguration
+						Name="Debug|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						>
+						<Tool
+							Name="VCCLCompilerTool"
+							PreprocessorDefinitions=""
+						/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\src\vm\ym2151.cpp"
 					>
 					<FileConfiguration
 						Name="Debug|Win32"
@@ -755,6 +835,26 @@
 					</File>
 					<File
 						RelativePath="..\src\vm\fmgen\fmtimer.cpp"
+						>
+						<FileConfiguration
+							Name="Debug|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								PreprocessorDefinitions=""
+							/>
+						</FileConfiguration>
+						<FileConfiguration
+							Name="Release|Win32"
+							>
+							<Tool
+								Name="VCCLCompilerTool"
+								PreprocessorDefinitions=""
+							/>
+						</FileConfiguration>
+					</File>
+					<File
+						RelativePath="..\src\vm\fmgen\opm.cpp"
 						>
 						<FileConfiguration
 							Name="Debug|Win32"
@@ -948,6 +1048,18 @@
 					>
 				</File>
 				<File
+					RelativePath="..\src\vm\scsi_cdrom.h"
+					>
+				</File>
+				<File
+					RelativePath="..\src\vm\scsi_dev.h"
+					>
+				</File>
+				<File
+					RelativePath="..\src\vm\scsi_host.h"
+					>
+				</File>
+				<File
 					RelativePath="..\src\vm\upd1990a.h"
 					>
 				</File>
@@ -961,6 +1073,10 @@
 				</File>
 				<File
 					RelativePath="..\src\vm\vm_template.h"
+					>
+				</File>
+				<File
+					RelativePath="..\src\vm\ym2151.h"
 					>
 				</File>
 				<File
@@ -996,6 +1112,10 @@
 					</File>
 					<File
 						RelativePath="..\src\vm\fmgen\misc.h"
+						>
+					</File>
+					<File
+						RelativePath="..\src\vm\fmgen\opm.h"
 						>
 					</File>
 					<File
