--- a/source/src/res/pc8801ma.rc
+++ b/source/src/res/pc8801ma.rc
@@ -158,6 +158,13 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Recent",                      ID_RECENT_TAPE1
     END
+    POPUP "CD-ROM"
+    BEGIN
+        MENUITEM "Insert",                      ID_OPEN_COMPACT_DISC1
+        MENUITEM "Eject",                       ID_CLOSE_COMPACT_DISC1
+        MENUITEM SEPARATOR
+        MENUITEM "Recent",                      ID_RECENT_COMPACT_DISC1
+    END
     POPUP "Device"
     BEGIN
         POPUP "Boot"
@@ -267,6 +274,7 @@ BEGIN
         BEGIN
             MENUITEM "Joystick #1",             ID_INPUT_JOYSTICK0
             MENUITEM "Joystick #2",             ID_INPUT_JOYSTICK1
+            MENUITEM "Joystick To Keyboard",    ID_INPUT_JOYTOKEY
         END
         MENUITEM SEPARATOR
         MENUITEM "Use Direct3D9",               ID_HOST_USE_D3D9
@@ -304,7 +312,7 @@ IDI_ICON1               ICON    DISCARDABLE     "pc8801ma.ico"
 // Dialog
 //
 
-IDD_VOLUME DIALOG DISCARDABLE  0, 0, 250, 360
+IDD_VOLUME DIALOG DISCARDABLE  0, 0, 250, 420
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Volume"
 FONT 9, "MS PGothic"
@@ -342,8 +350,14 @@ BEGIN
     LTEXT           "Sound Device #11",IDC_VOLUME_CAPTION10,6,306,60,8
     CONTROL         "",IDC_VOLUME_PARAM_L10,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,306,175,12
     CONTROL         "",IDC_VOLUME_PARAM_R10,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,321,175,12
-    DEFPUSHBUTTON   "OK",IDOK,70,340,50,14
-    DEFPUSHBUTTON   "Reset",IDC_VOLUME_RESET,130,340,50,14
+    LTEXT           "Sound Device #12",IDC_VOLUME_CAPTION11,6,336,60,8
+    CONTROL         "",IDC_VOLUME_PARAM_L11,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,336,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R11,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,351,175,12
+    LTEXT           "Sound Device #13",IDC_VOLUME_CAPTION12,6,366,60,8
+    CONTROL         "",IDC_VOLUME_PARAM_L12,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,366,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R12,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,381,175,12
+    DEFPUSHBUTTON   "OK",IDOK,70,400,50,14
+    DEFPUSHBUTTON   "Reset",IDC_VOLUME_RESET,130,400,50,14
 END
 
 IDD_JOYSTICK DIALOG DISCARDABLE  0, 0, 175, 120
@@ -365,6 +379,36 @@ BEGIN
     EDITTEXT        IDC_JOYSTICK_PARAM5,50,79,120,14,ES_MULTILINE
     DEFPUSHBUTTON   "OK",IDOK,35,100,50,14
     DEFPUSHBUTTON   "Reset",IDC_JOYSTICK_RESET,90,100,50,14
+END
+
+IDD_JOYTOKEY DIALOG DISCARDABLE  0, 0, 175, 235
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Joystick To Keyboard"
+FONT 9, "MS PGothic"
+BEGIN
+    CONTROL         "Enable Joystick To Keyboard",IDC_JOYTOKEY_CHECK0,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,6,164,8
+    CONTROL         "Cursor Key",IDC_JOYTOKEY_RADIO0,"Button",BS_AUTORADIOBUTTON,6,26,164,7
+    CONTROL         "NumPad Key (4-Directions)",IDC_JOYTOKEY_RADIO1,"Button",BS_AUTORADIOBUTTON,6,41,164,7
+    CONTROL         "NumPad Key (8-Directions)",IDC_JOYTOKEY_RADIO2,"Button",BS_AUTORADIOBUTTON,6,56,164,7
+    CONTROL         "Press NumPad 5 To Release Stick",IDC_JOYTOKEY_CHECK1,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,71,164,8
+    LTEXT           "Button #1",IDC_JOYSTICK_CAPTION0,6,91,40,8
+    EDITTEXT        IDC_JOYSTICK_PARAM0,50,89,120,14,ES_MULTILINE
+    LTEXT           "Button #2",IDC_JOYSTICK_CAPTION1,6,106,40,8
+    EDITTEXT        IDC_JOYSTICK_PARAM1,50,104,120,14,ES_MULTILINE
+    LTEXT           "Button #3",IDC_JOYSTICK_CAPTION2,6,121,40,8
+    EDITTEXT        IDC_JOYSTICK_PARAM2,50,119,120,14,ES_MULTILINE
+    LTEXT           "Button #4",IDC_JOYSTICK_CAPTION3,6,136,40,8
+    EDITTEXT        IDC_JOYSTICK_PARAM3,50,134,120,14,ES_MULTILINE
+    LTEXT           "Button #5",IDC_JOYSTICK_CAPTION4,6,151,40,8
+    EDITTEXT        IDC_JOYSTICK_PARAM4,50,149,120,14,ES_MULTILINE
+    LTEXT           "Button #6",IDC_JOYSTICK_CAPTION5,6,166,40,8
+    EDITTEXT        IDC_JOYSTICK_PARAM5,50,164,120,14,ES_MULTILINE
+    LTEXT           "Button #7",IDC_JOYSTICK_CAPTION6,6,181,40,8
+    EDITTEXT        IDC_JOYSTICK_PARAM6,50,179,120,14,ES_MULTILINE
+    LTEXT           "Button #8",IDC_JOYSTICK_CAPTION7,6,196,40,8
+    EDITTEXT        IDC_JOYSTICK_PARAM7,50,194,120,14,ES_MULTILINE
+    DEFPUSHBUTTON   "OK",IDOK,35,215,50,14
+    DEFPUSHBUTTON   "Reset",IDC_JOYSTICK_RESET,90,215,50,14
 END
 
 
