--- a/source/vc++2013/pc8801ma.vcxproj
+++ b/source/vc++2013/pc8801ma.vcxproj
@@ -175,12 +175,17 @@
     <ClCompile Include="..\src\vm\pc80s31k.cpp" />
     <ClCompile Include="..\src\vm\pcm1bit.cpp" />
     <ClCompile Include="..\src\vm\prnfile.cpp" />
+    <ClCompile Include="..\src\vm\scsi_cdrom.cpp" />
+    <ClCompile Include="..\src\vm\scsi_dev.cpp" />
+    <ClCompile Include="..\src\vm\scsi_host.cpp" />
     <ClCompile Include="..\src\vm\upd1990a.cpp" />
     <ClCompile Include="..\src\vm\upd765a.cpp" />
+    <ClCompile Include="..\src\vm\ym2151.cpp" />
     <ClCompile Include="..\src\vm\ym2203.cpp" />
     <ClCompile Include="..\src\vm\z80.cpp" />
     <ClCompile Include="..\src\vm\fmgen\fmgen.cpp" />
     <ClCompile Include="..\src\vm\fmgen\fmtimer.cpp" />
+    <ClCompile Include="..\src\vm\fmgen\opm.cpp" />
     <ClCompile Include="..\src\vm\fmgen\opna.cpp" />
     <ClCompile Include="..\src\vm\fmgen\psg.cpp" />
     <ClCompile Include="..\src\vm\pc8801\pc88.cpp" />
@@ -204,10 +209,14 @@
     <ClInclude Include="..\src\vm\pc80s31k.h" />
     <ClInclude Include="..\src\vm\pcm1bit.h" />
     <ClInclude Include="..\src\vm\prnfile.h" />
+    <ClInclude Include="..\src\vm\scsi_cdrom.h" />
+    <ClInclude Include="..\src\vm\scsi_dev.h" />
+    <ClInclude Include="..\src\vm\scsi_host.h" />
     <ClInclude Include="..\src\vm\upd1990a.h" />
     <ClInclude Include="..\src\vm\upd765a.h" />
     <ClInclude Include="..\src\vm\vm.h" />
     <ClInclude Include="..\src\vm\vm_template.h" />
+    <ClInclude Include="..\src\vm\ym2151.h" />
     <ClInclude Include="..\src\vm\ym2203.h" />
     <ClInclude Include="..\src\vm\z80.h" />
     <ClInclude Include="..\src\vm\fmgen\diag.h" />
@@ -216,6 +225,7 @@
     <ClInclude Include="..\src\vm\fmgen\fmtimer.h" />
     <ClInclude Include="..\src\vm\fmgen\headers.h" />
     <ClInclude Include="..\src\vm\fmgen\misc.h" />
+    <ClInclude Include="..\src\vm\fmgen\opm.h" />
     <ClInclude Include="..\src\vm\fmgen\opna.h" />
     <ClInclude Include="..\src\vm\fmgen\psg.h" />
     <ClInclude Include="..\src\vm\pc8801\pc88.h" />
