--- a/source/vc++2013/pc8801ma.vcxproj.filters
+++ b/source/vc++2013/pc8801ma.vcxproj.filters
@@ -117,10 +117,22 @@
     <ClCompile Include="..\src\vm\prnfile.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\vm\scsi_cdrom.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\vm\scsi_dev.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\vm\scsi_host.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\vm\upd1990a.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\vm\upd765a.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\vm\ym2151.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\vm\ym2203.cpp">
@@ -133,6 +145,9 @@
       <Filter>Source Files\VM Common Source Files\fmgen Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\vm\fmgen\fmtimer.cpp">
+      <Filter>Source Files\VM Common Source Files\fmgen Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\vm\fmgen\opm.cpp">
       <Filter>Source Files\VM Common Source Files\fmgen Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\vm\fmgen\opna.cpp">
@@ -200,6 +215,15 @@
     <ClInclude Include="..\src\vm\prnfile.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\vm\scsi_cdrom.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\vm\scsi_dev.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\vm\scsi_host.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\src\vm\upd1990a.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
@@ -210,6 +234,9 @@
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\vm\vm_template.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\vm\ym2151.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\vm\ym2203.h">
@@ -234,6 +261,9 @@
       <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\vm\fmgen\misc.h">
+      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\vm\fmgen\opm.h">
       <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\vm\fmgen\opna.h">
