[VM][FMTOWNS][WIP] Update CmakeLists.

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -3,12 +3,13 @@ cmake_minimum_required (VERSION 2.6)
 message("* vm/fm-towns")
 
 add_library(vm_fmtowns
-	bios.cpp
 	cmos.cpp
 	floppy.cpp
 	keyboard.cpp
-	memory.cpp
 	scsi.cpp
 	timer.cpp
-	fmr50.cpp
+	towns_crtc.cpp
+	towns_memory.cpp
+	towns_sprite.cpp
+	towns_vram.cpp
 )
