[VM][FMTOWNS] Add FONT ROMS, MSDOS ROM, SYSTEM ROM and SERIAL ROM.

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -3,11 +3,18 @@ cmake_minimum_required (VERSION 2.6)
 message("* vm/fm-towns")
 
 add_library(vm_fmtowns
-	cmos.cpp
 	floppy.cpp
 	keyboard.cpp
 	scsi.cpp
 	timer.cpp
+
+	serialrom.cpp
+	sysrom.cpp
+	dictionary.cpp
+	msdosrom.cpp
+	
+	fontroms.cpp
+	
 	towns_crtc.cpp
 	towns_memory.cpp
 	towns_sprite.cpp
