--- a/source/src/res/pc8001mk2sr.rc
+++ b/source/src/res/pc8001mk2sr.rc
@@ -97,29 +97,29 @@ BEGIN
         MENUITEM SEPARATOR
         POPUP "Save State"
         BEGIN
-            MENUITEM "State 0",                 ID_SAVE_STATE0
-            MENUITEM "State 1",                 ID_SAVE_STATE1
-            MENUITEM "State 2",                 ID_SAVE_STATE2
-            MENUITEM "State 3",                 ID_SAVE_STATE3
-            MENUITEM "State 4",                 ID_SAVE_STATE4
-            MENUITEM "State 5",                 ID_SAVE_STATE5
-            MENUITEM "State 6",                 ID_SAVE_STATE6
-            MENUITEM "State 7",                 ID_SAVE_STATE7
-            MENUITEM "State 8",                 ID_SAVE_STATE8
-            MENUITEM "State 9",                 ID_SAVE_STATE9
+            MENUITEM "State 0",                     ID_SAVE_STATE0
+            MENUITEM "State 1",                     ID_SAVE_STATE1
+            MENUITEM "State 2",                     ID_SAVE_STATE2
+            MENUITEM "State 3",                     ID_SAVE_STATE3
+            MENUITEM "State 4",                     ID_SAVE_STATE4
+            MENUITEM "State 5",                     ID_SAVE_STATE5
+            MENUITEM "State 6",                     ID_SAVE_STATE6
+            MENUITEM "State 7",                     ID_SAVE_STATE7
+            MENUITEM "State 8",                     ID_SAVE_STATE8
+            MENUITEM "State 9",                     ID_SAVE_STATE9
         END
         POPUP "Load State"
         BEGIN
-            MENUITEM "State 0",                 ID_LOAD_STATE0
-            MENUITEM "State 1",                 ID_LOAD_STATE1
-            MENUITEM "State 2",                 ID_LOAD_STATE2
-            MENUITEM "State 3",                 ID_LOAD_STATE3
-            MENUITEM "State 4",                 ID_LOAD_STATE4
-            MENUITEM "State 5",                 ID_LOAD_STATE5
-            MENUITEM "State 6",                 ID_LOAD_STATE6
-            MENUITEM "State 7",                 ID_LOAD_STATE7
-            MENUITEM "State 8",                 ID_LOAD_STATE8
-            MENUITEM "State 9",                 ID_LOAD_STATE9
+            MENUITEM "State 0",                     ID_LOAD_STATE0
+            MENUITEM "State 1",                     ID_LOAD_STATE1
+            MENUITEM "State 2",                     ID_LOAD_STATE2
+            MENUITEM "State 3",                     ID_LOAD_STATE3
+            MENUITEM "State 4",                     ID_LOAD_STATE4
+            MENUITEM "State 5",                     ID_LOAD_STATE5
+            MENUITEM "State 6",                     ID_LOAD_STATE6
+            MENUITEM "State 7",                     ID_LOAD_STATE7
+            MENUITEM "State 8",                     ID_LOAD_STATE8
+            MENUITEM "State 9",                     ID_LOAD_STATE9
         END
         MENUITEM SEPARATOR
         MENUITEM "Debug Main CPU",              ID_OPEN_DEBUGGER0
@@ -170,28 +170,27 @@ BEGIN
         END
         POPUP "DIP Switch"
         BEGIN
-            MENUITEM "Memory Wait",             ID_VM_DIPSWITCH0
-        END
-        POPUP "Joystick"
-        BEGIN
-            MENUITEM "Joystick"                 ID_VM_JOYSTICK_TYPE0
-            MENUITEM "Bus Mouse"                ID_VM_JOYSTICK_TYPE1
+            MENUITEM "Memory Wait",                 ID_VM_DIPSWITCH0
         END
         POPUP "Sound"
         BEGIN
-            MENUITEM "Play FDD Noise",          ID_VM_SOUND_NOISE_FDD
-            MENUITEM "Play CMT Noise",          ID_VM_SOUND_NOISE_CMT, GRAYED
-            MENUITEM "Play CMT Sound",          ID_VM_SOUND_PLAY_TAPE, GRAYED
+            MENUITEM "OPN",                     ID_VM_SOUND_TYPE0
+            MENUITEM "OPN+OPN",                 ID_VM_SOUND_TYPE1
+            MENUITEM "OPN+OPNA",                ID_VM_SOUND_TYPE2
+            MENUITEM SEPARATOR
+            MENUITEM "Play FDD Noise",              ID_VM_SOUND_NOISE_FDD
+            MENUITEM "Play CMT Noise",              ID_VM_SOUND_NOISE_CMT, GRAYED
+            MENUITEM "Play CMT Sound",              ID_VM_SOUND_PLAY_TAPE, GRAYED
         END
         POPUP "Display"
         BEGIN
-            MENUITEM "Scanline",                ID_VM_MONITOR_SCANLINE
+            MENUITEM "Scanline",                    ID_VM_MONITOR_SCANLINE
         END
         POPUP "Printer"
         BEGIN
-            MENUITEM "Write Printer to File",   ID_VM_PRINTER_TYPE0
-            MENUITEM "PC-PR201",                ID_VM_PRINTER_TYPE1, GRAYED
-            MENUITEM "None",                    ID_VM_PRINTER_TYPE2
+            MENUITEM "Write Printer to File",       ID_VM_PRINTER_TYPE0
+            MENUITEM "PC-PR201",                    ID_VM_PRINTER_TYPE1, GRAYED
+            MENUITEM "None",                        ID_VM_PRINTER_TYPE2
         END
     END
     POPUP "Host"
@@ -205,54 +204,54 @@ BEGIN
         MENUITEM SEPARATOR
         POPUP "Screen"
         BEGIN
-            MENUITEM "Window x1",               ID_SCREEN_WINDOW
-            MENUITEM "Fullscreen 640x400",      ID_SCREEN_FULLSCREEN
+            MENUITEM "Window x1",                   ID_SCREEN_WINDOW
+            MENUITEM "Fullscreen 640x400",          ID_SCREEN_FULLSCREEN
             MENUITEM SEPARATOR
-            MENUITEM "Window Stretch 1",        ID_SCREEN_WINDOW_STRETCH
-            MENUITEM "Window Stretch 2",        ID_SCREEN_WINDOW_ASPECT
+            MENUITEM "Window Stretch 1",            ID_SCREEN_WINDOW_STRETCH
+            MENUITEM "Window Stretch 2",            ID_SCREEN_WINDOW_ASPECT
             MENUITEM SEPARATOR
-            MENUITEM "Fullscreen Stretch 1",    ID_SCREEN_FULLSCREEN_DOTBYDOT
-            MENUITEM "Fullscreen Stretch 2",    ID_SCREEN_FULLSCREEN_STRETCH
-            MENUITEM "Fullscreen Stretch 3",    ID_SCREEN_FULLSCREEN_ASPECT
-            MENUITEM "Fullscreen Stretch 4",    ID_SCREEN_FULLSCREEN_FILL
+            MENUITEM "Fullscreen Stretch 1",        ID_SCREEN_FULLSCREEN_DOTBYDOT
+            MENUITEM "Fullscreen Stretch 2",        ID_SCREEN_FULLSCREEN_STRETCH
+            MENUITEM "Fullscreen Stretch 3",        ID_SCREEN_FULLSCREEN_ASPECT
+            MENUITEM "Fullscreen Stretch 4",        ID_SCREEN_FULLSCREEN_FILL
             MENUITEM SEPARATOR
-            MENUITEM "Rotate 0deg",             ID_SCREEN_ROTATE_0
-            MENUITEM "Rotate +90deg",           ID_SCREEN_ROTATE_90
-            MENUITEM "Rotate 180deg",           ID_SCREEN_ROTATE_180
-            MENUITEM "Rotate -90deg",           ID_SCREEN_ROTATE_270
+            MENUITEM "Rotate 0deg",                 ID_SCREEN_ROTATE_0
+            MENUITEM "Rotate +90deg",               ID_SCREEN_ROTATE_90
+            MENUITEM "Rotate 180deg",               ID_SCREEN_ROTATE_180
+            MENUITEM "Rotate -90deg",               ID_SCREEN_ROTATE_270
         END
         POPUP "Filter"
         BEGIN
-            MENUITEM "RGB Filter",              ID_FILTER_RGB
-            MENUITEM "None",                    ID_FILTER_NONE
+            MENUITEM "RGB Filter",                  ID_FILTER_RGB
+            MENUITEM "None",                        ID_FILTER_NONE
         END
         POPUP "Sound"
         BEGIN
-            MENUITEM "2000Hz",                  ID_SOUND_FREQ0
-            MENUITEM "4000Hz",                  ID_SOUND_FREQ1
-            MENUITEM "8000Hz",                  ID_SOUND_FREQ2
-            MENUITEM "11025Hz",                 ID_SOUND_FREQ3
-            MENUITEM "22050Hz",                 ID_SOUND_FREQ4
-            MENUITEM "44100Hz",                 ID_SOUND_FREQ5
-            MENUITEM "55467Hz",                 ID_SOUND_FREQ6
-            MENUITEM "96000Hz",                 ID_SOUND_FREQ7
+            MENUITEM "2000Hz",                      ID_SOUND_FREQ0
+            MENUITEM "4000Hz",                      ID_SOUND_FREQ1
+            MENUITEM "8000Hz",                      ID_SOUND_FREQ2
+            MENUITEM "11025Hz",                     ID_SOUND_FREQ3
+            MENUITEM "22050Hz",                     ID_SOUND_FREQ4
+            MENUITEM "44100Hz",                     ID_SOUND_FREQ5
+            MENUITEM "55467Hz",                     ID_SOUND_FREQ6
+            MENUITEM "96000Hz",                     ID_SOUND_FREQ7
             MENUITEM SEPARATOR
-            MENUITEM "50msec",                  ID_SOUND_LATE0
-            MENUITEM "100msec",                 ID_SOUND_LATE1
-            MENUITEM "200msec",                 ID_SOUND_LATE2
-            MENUITEM "300msec",                 ID_SOUND_LATE3
-            MENUITEM "400msec",                 ID_SOUND_LATE4
+            MENUITEM "50msec",                      ID_SOUND_LATE0
+            MENUITEM "100msec",                     ID_SOUND_LATE1
+            MENUITEM "200msec",                     ID_SOUND_LATE2
+            MENUITEM "300msec",                     ID_SOUND_LATE3
+            MENUITEM "400msec",                     ID_SOUND_LATE4
             MENUITEM SEPARATOR
-            MENUITEM "Realtime Mix",            ID_SOUND_STRICT_RENDER
-            MENUITEM "Light Weight Mix",        ID_SOUND_LIGHT_RENDER
+            MENUITEM "Realtime Mix",                ID_SOUND_STRICT_RENDER
+            MENUITEM "Light Weight Mix",            ID_SOUND_LIGHT_RENDER
             MENUITEM SEPARATOR
-            MENUITEM "Volume",                  ID_SOUND_VOLUME
+            MENUITEM "Volume",                      ID_SOUND_VOLUME
         END
         POPUP "Input"
         BEGIN
-            MENUITEM "Joystick #1",             ID_INPUT_JOYSTICK0
-            MENUITEM "Joystick #2",             ID_INPUT_JOYSTICK1
-            MENUITEM "Joystick To Keyboard",    ID_INPUT_JOYTOKEY
+            MENUITEM "Joystick #1",                 ID_INPUT_JOYSTICK0
+            MENUITEM "Joystick #2",                 ID_INPUT_JOYSTICK1
+            MENUITEM "Joystick To Keyboard",        ID_INPUT_JOYTOKEY
         END
         MENUITEM SEPARATOR
         MENUITEM "Use Direct3D9",               ID_HOST_USE_D3D9
@@ -290,7 +289,7 @@ IDI_ICON1               ICON    DISCARDABLE     "pc8001mk2sr.ico"
 // Dialog
 //
 
-IDD_VOLUME DIALOG DISCARDABLE  0, 0, 250, 180
+IDD_VOLUME DIALOG DISCARDABLE  0, 0, 250, 360
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Volume"
 FONT 9, "MS PGothic"
@@ -301,17 +300,35 @@ BEGIN
     LTEXT           "Sound Device #2",IDC_VOLUME_CAPTION1,6,36,60,8
     CONTROL         "",IDC_VOLUME_PARAM_L1,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,36,175,12
     CONTROL         "",IDC_VOLUME_PARAM_R1,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,51,175,12
-    LTEXT           "Sound Device #3",IDC_VOLUME_CAPTION2,6,66,60,8
-    CONTROL         "",IDC_VOLUME_PARAM_L2,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,66,175,12
-    CONTROL         "",IDC_VOLUME_PARAM_R2,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,81,175,12
-    LTEXT           "Sound Device #4",IDC_VOLUME_CAPTION3,6,96,60,8
-    CONTROL         "",IDC_VOLUME_PARAM_L3,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,96,175,12
-    CONTROL         "",IDC_VOLUME_PARAM_R3,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,111,175,12
+    LTEXT           "Sound Device #3",IDC_VOLUME_CAPTION2,6,66,60,8,WS_DISABLED
+    CONTROL         "",IDC_VOLUME_PARAM_L2,"msctls_trackbar32",TBS_AUTOTICKS | WS_DISABLED | WS_TABSTOP,70,66,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R2,"msctls_trackbar32",TBS_AUTOTICKS | WS_DISABLED | WS_TABSTOP,70,81,175,12
+    LTEXT           "Sound Device #4",IDC_VOLUME_CAPTION3,6,96,60,8,WS_DISABLED
+    CONTROL         "",IDC_VOLUME_PARAM_L3,"msctls_trackbar32",TBS_AUTOTICKS | WS_DISABLED | WS_TABSTOP,70,96,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R3,"msctls_trackbar32",TBS_AUTOTICKS | WS_DISABLED | WS_TABSTOP,70,111,175,12
     LTEXT           "Sound Device #5",IDC_VOLUME_CAPTION4,6,126,60,8
     CONTROL         "",IDC_VOLUME_PARAM_L4,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,126,175,12
     CONTROL         "",IDC_VOLUME_PARAM_R4,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,141,175,12
-    DEFPUSHBUTTON   "OK",IDOK,70,160,50,14
-    DEFPUSHBUTTON   "Reset",IDC_VOLUME_RESET,130,160,50,14
+    LTEXT           "Sound Device #6",IDC_VOLUME_CAPTION5,6,156,60,8
+    CONTROL         "",IDC_VOLUME_PARAM_L5,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,156,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R5,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,171,175,12
+    LTEXT           "Sound Device #7",IDC_VOLUME_CAPTION6,6,186,60,8
+    CONTROL         "",IDC_VOLUME_PARAM_L6,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,186,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R6,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,201,175,12
+    LTEXT           "Sound Device #8",IDC_VOLUME_CAPTION7,6,216,60,8
+    CONTROL         "",IDC_VOLUME_PARAM_L7,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,216,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R7,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,231,175,12
+    LTEXT           "Sound Device #9",IDC_VOLUME_CAPTION8,6,246,60,8
+    CONTROL         "",IDC_VOLUME_PARAM_L8,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,246,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R8,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,261,175,12
+    LTEXT           "Sound Device #10",IDC_VOLUME_CAPTION9,6,276,60,8
+    CONTROL         "",IDC_VOLUME_PARAM_L9,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,276,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R9,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,291,175,12
+    LTEXT           "Sound Device #11",IDC_VOLUME_CAPTION10,6,306,60,8
+    CONTROL         "",IDC_VOLUME_PARAM_L10,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,306,175,12
+    CONTROL         "",IDC_VOLUME_PARAM_R10,"msctls_trackbar32",TBS_AUTOTICKS | WS_TABSTOP,70,321,175,12
+    DEFPUSHBUTTON   "OK",IDOK,70,340,50,14
+    DEFPUSHBUTTON   "Reset",IDC_VOLUME_RESET,130,340,50,14
 END
 
 IDD_JOYSTICK DIALOG DISCARDABLE  0, 0, 175, 120
