[VM][FMTOWNS] Add audio ADC and DAC.Please read ad7820kr.h to see proposed new APIs.

--- a/source/src/vm/fmtowns/CMakeLists.txt
+++ b/source/src/vm/fmtowns/CMakeLists.txt
@@ -3,6 +3,11 @@ cmake_minimum_required (VERSION 2.6)
 message("* vm/fm-towns")
 
 add_library(vm_fmtowns
+
+	ad7820kr.cpp
+	rf5c68.cpp
+	
+	adpcm.cpp
 	floppy.cpp
 	keyboard.cpp
 	scsi.cpp
