[VM][PCENGINE][ADPCM] Separate around ADPCM to ADPCM:: .

--- a/source/src/vm/pcengine/CMakeLists.txt
+++ b/source/src/vm/pcengine/CMakeLists.txt
@@ -5,10 +5,12 @@ message("* vm/pce")
 if(BUILD_X1TWIN)
 add_library(vm_pcengine
            pce.cpp
+		   
 )
 else()
 add_library(vm_pcengine
-           pce.cpp
+       pce.cpp
+	   adpcm.cpp	   
 	   pcengine.cpp
 )
 endif()
